--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
       folders: |
         [
           ".",
-          "e2e/smoke"
+          "examples"
         ]
       exclude: |
         [
