chore: add more bzl_library deps

--- a/awk/BUILD
+++ b/awk/BUILD
@@ -4,5 +4,9 @@ bzl_library(
     name = "awk",
     srcs = ["awk.bzl"],
     visibility = ["//awk:__subpackages__"],
-    deps = ["//awk/private:awk.bzl"],
+    deps = [
+        "//awk/private:awk.bzl",
+        "@bazel_skylib//lib:partial",
+        "@bazel_skylib//rules:write_file",
+    ],
 )
