--- a/awk/private/BUILD
+++ b/awk/private/BUILD
@@ -1,7 +1,10 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 
+package(default_visibility = ["//awk:__subpackages__"])
+
+exports_files(["awk.bzl"])
+
 bzl_library(
     name = "awk",
     srcs = ["awk.bzl"],
-    visibility = ["//awk:__subpackages__"],
 )
