--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -55,7 +55,7 @@ jobs:
     with:
       tag_name: ${{ needs.tag.outputs.new-tag-version }}
     secrets:
-      publish_token: ${{ secrets.BCR_PUBLISH_TOKEN }}
+      BCR_PUBLISH_TOKEN: ${{ secrets.BCR_PUBLISH_TOKEN }}
     if: needs.tag.outputs.new-tag == 'true' && needs.tag.outputs.new-tag-version-type != 'major' && needs.tag.outputs.recently-tagged != 'true'
     permissions:
       contents: write # allow create release
