--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -10,7 +10,7 @@ on:
   # For example after landing a fix that customers are waiting for.
   workflow_dispatch:
   schedule:
-    - cron: "45 2 * * *"
+    - cron: "55 2 * * *"
 jobs:
   tag:
     permissions:
@@ -51,7 +51,7 @@ jobs:
         uses: smlx/ccv@7318e2f25a52dcd550e75384b84983973251a1f8 # v0.10.0
   release:
     needs: tag
-    uses: ./.github/workflows/release.yml
+    uses: ./.github/workflows/release.yaml
     with:
       tag_name: ${{ needs.tag.outputs.new-tag-version }}
     secrets:
