--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -10,7 +10,7 @@ on:
   # For example after landing a fix that customers are waiting for.
   workflow_dispatch:
   schedule:
-    - cron: "45 2 * * *"
+    - cron: "15 * * * *"
 jobs:
   tag:
     permissions:
@@ -19,6 +19,8 @@ jobs:
     outputs:
       new-tag: ${{ steps.ccv.outputs.new-tag }}
       new-tag-version: ${{steps.ccv.outputs.new-tag-version}}
+      new-tag-version-type: ${{steps.ccv.outputs.new-tag-version-type}}
+      recently-tagged: ${{steps.recent-tag.outputs.recently-tagged}}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -33,7 +35,7 @@ jobs:
           # which overwhelms BCR maintainers and over-notifies users,
           # and releasing too infrequently which delays delivery of bugfixes and features.
           MAX_AGE=1209600  # 2 weeks
-          TAG=$(git describe --tags --match 'v[0-9]*.[0-9]*.[0-9]*' 2>/dev/null) || {
+          TAG=$(git describe --tags --match 'v[0-9]*.[0-9]*.[0-9]*' --abbrev=0 2>/dev/null) || {
             echo "No matching tag — continue workflow."
             exit 0
           }
@@ -51,11 +53,13 @@ jobs:
         uses: smlx/ccv@7318e2f25a52dcd550e75384b84983973251a1f8 # v0.10.0
   release:
     needs: tag
-    uses: ./.github/workflows/release.yml
+    uses: ./.github/workflows/release.yaml
     with:
       tag_name: ${{ needs.tag.outputs.new-tag-version }}
     secrets:
       BCR_PUBLISH_TOKEN: ${{ secrets.BCR_PUBLISH_TOKEN }}
     if: needs.tag.outputs.new-tag == 'true' && needs.tag.outputs.new-tag-version-type != 'major' && needs.tag.outputs.recently-tagged != 'true'
     permissions:
-      contents: write # allow create release
+      contents: write
+      attestations: write
+      id-token: write
