--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -10,7 +10,7 @@ on:
   # For example after landing a fix that customers are waiting for.
   workflow_dispatch:
   schedule:
-    - cron: "11 * * * *"
+    - cron: "16 3 * * *"
 jobs:
   tag:
     permissions:
