--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -11,5 +11,6 @@ bazel_dep(name = "platforms", version = "0.0.5")
 bazel_dep(name = "gawk", version = "5.3.2.bcr.1")
 
 bazel_dep(name = "aspect_bazel_lib", version = "2.19.3", dev_dependency = True)
+bazel_dep(name = "bazelrc-preset.bzl", version = "1.1.0", dev_dependency = True)
 bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)
 bazel_dep(name = "rules_testing", version = "0.8.0", dev_dependency = True)
