--- a/.aspect/workflows/.bazelrc
+++ b/.aspect/workflows/.bazelrc
@@ -1,3 +1,4 @@
 # build without the bytes
 common --remote_download_outputs=minimal
 common --nobuild_runfile_links
+common --bes_results_url=https://app.aws.awd-oss-prod.aspect.build/
